CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(CMAKE_BUILD_TYPE None)
SET(CMAKE_C_COMPILER clang)
SET(CMAKE_CXX_COMPILER clang++)
IF(APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_LINKER_FLAGS} -std=c++0x -stdlib=libc++ -fno-rtti")
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++ -fno-rtti")
ELSE(APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_LINKER_FLAGS} --std=gnu++0x -fno-rtti")
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fno-rtti")
ENDIF(APPLE)

PROJECT (Refactorial)

FIND_PACKAGE(LLVM REQUIRED)

ADD_DEFINITIONS(${LLVM_DEFINITIONS})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
LINK_DIRECTORIES(${LLVM_LIBRARY_DIRS})
LLVM_MAP_COMPONENTS_TO_LIBRARIES(REQ_LLVM_LIBRARIES native)

SET(CLANG_LIBRARIES clangAnalysis clangAST clangBasic clangDriver clangEdit clangFrontend clangLex clangParse clangRewrite clangSema clangSerialization clangTooling)

ADD_SUBDIRECTORY (Transforms)

ADD_EXECUTABLE (refactorial main.cpp)
TARGET_LINK_LIBRARIES (refactorial ${REQ_LLVM_LIBRARIES} ${CLANG_LIBRARIES} Transforms)